# Jarvis

./: .gitignore  README.md  app.py  pyproject.toml  requirements.in  requirements.txt
config/: app.json  audit.json  backup.json  capabilities.json  events.json  execution.json  image.json  jobs.json  limits.json  llm.json  models.json  module_trust.json  modules.json  modules_registry.json  permissions.json  policy.json  privacy.json  recovery.json  resources.json  responses.json  runtime.json  runtime_state.json  security.json  state_machine.json  telemetry.json  ui.json  voice.json  web.json
docs/: README.md  sandbox.md
jarvis/: __init__.py
jarvis_offline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logs/: errors.jsonl  events.jsonl  security.jsonl  startup_report.json
scripts/: backup_create.py  backup_restore.py  backup_verify.py  check_usb_key.py  create_usb_key.py  dev_check.ps1  dev_check.sh  jarvis_setup.py  lock_deps.ps1  print_config.py  restore_config_lkg.py  restore_secure_store.py  rotate_api_key.py  rotate_usb_key.py  set_secret.py  support_bundle.py  verify_core.py  verify_deps.ps1
secure/: store.meta.json
tests/: conftest.py  test_admin_session.py  test_audit_timeline.py  test_backup_tooling.py  test_broker_basics.py  test_broker_cidr_allowlist.py  test_broker_client_allowlist.py  test_broker_ipc_token.py  test_broker_token_ttl_validation.py  test_capability_engine.py  test_circuit_breaker.py  test_config_contracts_minimal_valid.py  test_config_manager.py  test_config_minimal_validity.py  test_config_versioning_and_lkg.py  test_core_fact_fuzzy_matching.py  test_core_ux.py  test_crypto_and_store.py  test_denial_introspection.py  test_denial_introspection_fields.py  test_denied_never_executes_handler.py  test_dependency_lock_present.py  test_desktop_ui.py  test_discovery_no_imports.py  test_dispatch_and_routing.py  test_dispatcher_capability_enforcement.py  test_dispatcher_enforcement_invariants.py  test_dispatcher_error_boundary.py  test_dispatcher_permissions.py  test_entrypoints_route_through_dispatcher.py  test_errors_normalization.py  test_event_bus.py  test_execution_mode_defaults.py  test_execution_router.py  (+72 more)
(+313 files in other folders)
