[project]
name = "jarvis-offline"
version = "0.1.0"
description = "Secure, offline-first Jarvis assistant (minimal architecture proof)."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "cryptography>=42.0.0",
  "pydantic>=2.6.0",
  "requests>=2.31.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

