[project]
name = "jarvis-offline"
version = "0.1.0"
description = "Secure, offline-first Jarvis assistant (minimal architecture proof)."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "cryptography>=42.0.0",
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "requests>=2.31.0",
  "rich>=13.7.0",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jarvis*"]
exclude = ["config*", "logs*", "secrets*", "tests*", "scripts*"]

